--- a/frontend/src/pages/Main/styles.scss
+++ b/frontend/src/pages/Main/styles.scss
@@ -3,7 +3,6 @@
 
 .main {
   width: 100%;
-  height: 100%;
 
   display: flex;
   flex-direction: row;
@@ -31,11 +30,16 @@
       }
     }
 
-    .map {
+    .map-wrapper {
+      display: flex;
       flex-grow: 1;
       width: 90%;
       margin: auto;
       padding-bottom: 1rem;
+
+      .map {
+        width: 100%;
+      }
     }
   }
 
